# Nexus-ai-resolution

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pyre_configuration  LICENSE  README.md  docker-compose.yml  dvc.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: download-data.py
data/raw/: .gitignore  bitext_support_data.csv.dvc
docker/: Dockerfile.api  Dockerfile.ui  requirements-runtime.txt
docs/: DEPLOY.md
src/: config.py
src/agents/: action.py  agent.py  escalation.py  graph.py  kb_build.py  retriever.py  router.py  state.py  workers.py
src/api/: deps.py  main.py  schemas.py
src/router/: _features.py  bundle.py  compare.py  cross_validate.py  embed.py  evaluate.py  preprocess.py  register.py  train.py  train_embeddings.py  train_tfidf.py  tune.py
tests/: conftest.py  test_api.py  test_escalation.py  test_preprocess.py  test_router.py
